--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         160 Victoria Street · Carlton, VIC 3053 · 0420 897 977 ·
-                        <a href="wshi00011@gmail.com</a>
+                        <a href="wshi00011@gmail.com"</a>
                     </div>
                     <p class="lead mb-5">I am a IT girl with nice basic knowledge(Edit later)</p>
                     <div class="social-icons">
