--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
                         160 Victoria Street · Carlton, VIC 3053 · 0420 897 977 ·
                         <a href="wshi00011@gmail.com">wshi00011@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">I am a IT girl with nice basic knowledge(Edit later)</p>
+                    <p class="lead mb-5"></p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/wanwan-shi/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Eleven-SHI"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
                 </div>
             </section>
@@ -63,7 +63,7 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
+                            <h3 class="mb-0">shayebushi</h3>
                             <div class="subheading mb-3">Intelitec Solutions</div>
                             <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
                         </div>
