--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
@@ -45,9 +46,18 @@
                     </h1>
                     <div class="subheading mb-5">
                         160 Victoria Street · Carlton, VIC 3053 · 0420 897 977 ·
-                        <a href="wshi00011@gmail.com">wshi00011@gmail.com</a>
+                        <a href="mailto:wshi00011@gmail.com">Email</a>
                     </div>
-                    <p class="lead mb-5"></p>
+                    <p class="lead mb-5">
+                        Post-Graduate in Information Technology.
+                        <br>
+                        I have more than six years of learning experience in the field of computer. My undergraduate Computer Science study provides me with a theoretical foundation of computer, a good foundation of algorithm and data structure. 
+                        During my postgraduate study, I deepened my programming ability and learned Data Science to some extent.
+                        <br>
+                        Skilled in building <b>database</b> and <b>Front-end website</b>. I am keen to contribute my contribute my expertise to a dynamic and innovative team working in the area."
+                        <br>
+                        Continue to improve my professional skills and work towards becoming a full stack developer.
+                    </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/wanwan-shi/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Eleven-SHI"><i class="fab fa-github"></i></a>
@@ -63,9 +73,10 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">shayebushi</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">ACS Work Integrated Learning (WIL) program</h3>
+                            <div class="subheading mb-3">Game Designer internship | Melbourne</div>
+                            <p>Design and Develop a Virtual Reality Game base on requirements for people to overcome anxiety and pain while they are waiting to see a doctor. This program provided me with a genuine experience of ICT work in Australia in a virtual/remote working environment.</p>
+                        
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
                     </div>
@@ -92,6 +103,21 @@
                             <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0">
+            <!-- projects -->
+            <section class="resume-section" id="projects">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Peojects</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">project name</h3>
+                            <div class="subheading mb-3">Sub=-name</div>
+                            <p>Content123456789</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Project time</span></div>
                     </div>
                 </div>
             </section>
