--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/wanwan-shi/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Eleven-SHI"><i class="fab fa-github"></i></a>
-                        <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
+                        <!-- <a class="social-icon" href="https://eleven-shi.github.io/WanwanShi.github.io/"><i class="fas fa-briefcase"></i></a> -->
+                        
+                        <!-- <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a> -->
+                        <!-- <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
                 </div>
             </section>
@@ -225,7 +227,7 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">RMIT English Worldwide</h3>
+                            <h3 class="mb-0">RMIT English Worldwide (Australia)</h3>
                             <div class="subheading mb-3">RMIT English Worldwide Level-7 Course</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">November 2016 - February 2017</span></div>
@@ -302,6 +304,7 @@
                         <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
                         <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-java"></i></li>
                     </ul>
                     <div class="subheading mb-3">Workflow</div>
                     <ul class="fa-ul mb-0">
@@ -329,8 +332,8 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Melbourne, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an novice skier. During the warmer months here in Melbourne, I enjoy the sunshine and amazing beaches.</p>
+                    <p class="mb-0">I spend most of my time tidying up my room when indoors. I am a fan of traditional Chinese calligraphy and an aspiring chef. I really enjoy the feeling when I successfully create a new and delicious dish and my family love it.</p>
                 </div>
             </section>
             <hr class="m-0" />
